# ComfyUI-MoGe-360

./: .gitignore  README.md  __init__.py  env.example  nodes.py  pyproject.toml  requirements.txt  simple_nodes.py
moge/utils/: vis.py
moge360_layers/: complete_node.py  debug_nodes.py  depth_alignment_nodes.py  detection_nodes.py  inpainting_nodes.py  layer_nodes.py  matting_nodes.py  mesh_nodes.py  spherical_nodes.py  spherical_utils.py
workflows/: complete_360_layered_pipeline.json  detection_pipeline_test.json  quick_360_test.json
