[project]
name = "comfyui-moge-360-simple"
version = "1.0.1"
description = "Simplified 360° panorama to 3D geometry conversion for ComfyUI using MoGe"
authors = [{name = "Cedar Connor", email = "contact@cedarconnor.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0", 
    "numpy>=1.25.0",
    "einops>=0.6.0",
    "transformers>=4.28.0",
    "safetensors>=0.4.0",
    "Pillow>=10.0.0",
    "trimesh>=4.0.0",
    "huggingface-hub>=0.19.0",
    "accelerate>=0.25.0",
    "psutil>=5.9.0",
]

[project.urls]
Repository = "https://github.com/cedarconnor/ComfyUI-MoGe-360"
Issues = "https://github.com/cedarconnor/ComfyUI-MoGe-360/issues"